# Linkchecker

./: Cargo.toml  Makefile  README.md
.github/workflows/: run_test.yml
data/: input.md  output.md
src/: custom_errors.rs  main.rs  output.rs  parser.rs  request.rs  scraper.rs
