[package]
name = "Linkchecker"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
futures = "0.3"

[dev-dependencies]
httpmock = "0.7"